--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Nodejs crosschain app for gravium",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d lib",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,17 @@
   },
   "homepage": "https://github.com/Gravium/gravium-crosschain-swap#readme",
   "dependencies": {
-    "gravium": "^1.0.0",
-    "express": "^4.13.4"
+    "babel-eslint": "^6.0.4",
+    "gravium-core": "^1.0.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.1",
+    "eslint-plugin-jsx-a11y": "^1.0.4",
+    "eslint-plugin-react": "^5.0.1",
+    "lodash": "^4.11.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.7.7",
+    "babel-preset-es2015": "^6.6.0",
+    "eslint": "^2.8.0"
   }
 }
