--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "no-use-before-define": 0,
     "new-cap": 0,
     "no-console": 0,
-    "prefer-template": 0
+    "prefer-template": 0,
+    "no-restricted-syntax": 0
   }
 }
